; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_av_opt_get_double.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_av_opt_get_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @av_opt_get_double(i8* %0, i8* %1, i32 %2, double* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca double*, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store double* %3, double** %9, align 8
  store double 1.000000e+00, double* %10, align 8
  store double 1.000000e+00, double* %11, align 8
  store i32 1, i32* %13, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @get_number(i8* %14, i8* %15, i32* null, double* %11, i32* %13, double* %10, i32 %16)
  store i32 %17, i32* %12, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %4
  %20 = load i32, i32* %12, align 4
  store i32 %20, i32* %5, align 4
  br label %29

21:                                               ; preds = %4
  %22 = load double, double* %11, align 8
  %23 = load double, double* %10, align 8
  %24 = fmul double %22, %23
  %25 = load i32, i32* %13, align 4
  %26 = sitofp i32 %25 to double
  %27 = fdiv double %24, %26
  %28 = load double*, double** %9, align 8
  store double %27, double* %28, align 8
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %21, %19
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @get_number(i8*, i8*, i32*, double*, i32*, double*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
